# opencl_example

./: CMakeLists.txt  README.md  conanfile.py
src/: add.cl  add.cpp  main.cpp  reduce.cpp  rotate.cl  rotate.cpp
tclap/: CMakeLists.txt  tclap_example.cpp
